<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/brick_background"
    android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/btnSendRequest"
                android:layout_width="49dp"
                android:layout_height="59dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_send_white_24dp"
                android:textColor="@color/accent"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.931"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/contentContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:background="@color/accentShadow"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintBottom_toTopOf="@+id/btnSendRequest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/buttonLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:alpha="1"
                    android:background="@color/container"
                    android:elevation="24dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:translationZ="8dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_margin="15dp"
                        android:text="@string/song_request"
                        android:textColor="@color/colorPrimary"
                        android:textSize="30sp"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/buttonLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/accent"
                    android:elevation="24dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:translationZ="8dp">

                    <EditText
                        android:id="@+id/editTxtSong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:text="@string/song_title"
                        android:textColor="?android:attr/editTextColor"
                        android:visibility="visible"
                        android:hint="@string/title_of_the_song_being_requested"/>

                    <EditText
                        android:id="@+id/editTxtBand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:text="@string/band_name"
                        android:textColor="?android:attr/editTextColor"
                        android:visibility="visible"
                        android:hint="@string/artist_name"/>

                    <CheckBox
                        android:id="@+id/chkBoxName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="25dp"
                        android:checked="false"
                        android:padding="5dp"
                        android:text="@string/include_your_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:visibility="visible"
                        android:hint="@string/include_your_name_in_the_request"/>

                    <EditText
                        android:id="@+id/editTxtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="25dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:padding="7dp"
                        android:singleLine="true"
                        android:text="@string/name"
                        android:visibility="invisible"
                        android:hint="@string/your_name"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
